--- a/_includes/header.html
+++ b/_includes/header.html
@@ -12,6 +12,7 @@
       <li><a href="/">Spring</a>
         <ul>
           <li><a href="/Spring/TobySpring">TobySpring</a></li>
+          <li><a href="/Spring/SpringBoot">SpringBoot</a></li>
         </ul>
       </li>
 
